# ripseq

./: .pyproject.toml.swp  .workflow-index.yml  README.rst  environment.yml  pyproject.toml
.github/workflows/: apptainer.yml  main.yml  pypi.yml
doc/: conf.py  index.rst
sequana_pipelines/ripseq/: __init__.py  config.yaml  main.py  ripseq.rules  schema.yaml  tools.py  tools.txt
test/: test_main.py
